# Boilerplate-Fastapi-React-Vite-SQLalchemy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  ruff.toml  sql_app.db
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/app/api/: __init__.py  routes.py
backend/app/api/endpoints/: __init__.py  auth.py  health.py  users.py
backend/app/core/: config.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: user.py
backend/app/schemas/: health.py  user.py
backend/app/services/: auth.py
backend/tests/: conftest.py  test_health.py  test_users.py
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  biome.json  jsconfig.json  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/public/: index.html
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/__tests__/: App.test.jsx
frontend/src/api/: client.js  health.js
frontend/src/components/: HealthStatus.jsx  Layout.jsx
frontend/src/config/: env.js
scripts/: dev.ps1  test.ps1
