[project]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI boilerplate backend service"
readme = "../README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "aiosqlite>=0.19,<1.0",
    "slowapi>=0.1.9,<1.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<7.0.0",
    "ruff>=0.7.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
